...
                verticalArrangement = Arrangement.spacedBy(8.dp)
            ) {
                TextField(
                    value = firstName,
                    onValueChange = { firstName = it },
                    placeholder = { Text("First name") },
                    modifier = Modifier.testTag("input_name")
                )
                TextField(
                    value = lastName,
                    onValueChange = { lastName = it },
                    placeholder = { Text("Last name") }
                )
...
        confirmButton = {
            Button(onClick = {
                onEvent(ContactEvent.SetFirstName(firstName))
                onEvent(ContactEvent.SetLastName(lastName))
                onEvent(ContactEvent.SetPhoneNumber(phoneNumber))
                onEvent(ContactEvent.SaveContact)},
                modifier = Modifier.testTag("btn_save")
            ) {
                Text("Save")
            }
        },
        modifier = modifier
    )
...
